--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 
     <!--  Шапка-->
     <header class="header">
-        <div class="container header-nav">
+        <div class="container header__nav">
             <nav class="navigation">
                 <a href="./index.html" class="logo">Web<span>Studio</span>
                 </a>
