--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <!-- Наші клієнти -->
     <section class="section-client">
         <div class="container">
-            <h2 class="team-title">Постійні клієнти</h2>
+            <h2 class="client-title">Постійні клієнти</h2>
 
             <ul class="company">
                 <li class="card"><a class="client-icons" href="/">
@@ -419,13 +419,13 @@
         </div>
 
         <div class="footer-right-block">
-            <b class="footer-cta">Подпишитесь на рассылку</b>
+            <b class="footer-cta">Підпишіться на розсилку</b>
             <form class="subscription" name="subscription" autocomplete="on">
                 <label for="subsrtiption-email"></label>
                 <input class="subscription-input" type="email" name="subsrtiption-email" id="subsrtiption-email"
                     placeholder="E-mail" required="">
                 <button class="form-submit-btn" type="submit">
-                    Подписаться
+                    Підписатися
                     <svg class="form-icon-footer">
                         <use href="./images/symbol-defs.svg#icon-icon-footer" ></use>
                     </svg>
