--- a/index.html
+++ b/index.html
@@ -391,6 +391,7 @@
 <!-- Підвал -->
 <footer class="footer">
     <div class="container footer-block">
+       <div class="footer-flex">
         <address class="address">
             <a href="./index.html" class="logo-footer">Web<span class="img-logo-footer">Studio</span>
             </a>
@@ -417,6 +418,7 @@
                 </a></li>
             </ul>
         </div>
+       </div>
 
         <div class="footer-right-block">
             <b class="footer-cta">Підпишіться на розсилку</b>
