--- a/index.html
+++ b/index.html
@@ -405,16 +405,16 @@
             <h3 class="title-icon">ПРИЄДНУЙТЕСЬ</h3>
             <ul class="socials">
                 <li class="items-icon"> <a class="link-social" href="">
-                    <svg class="footer-icon" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-instagram"></use></svg>
+                    <svg class="footer-icons" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-instagram"></use></svg>
                 </a></li>
                 <li class="items-icon"> <a class="link-social" href="">
-                    <svg class="footer-icon" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-twitter"></use></svg>
+                    <svg class="footer-icons" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-twitter"></use></svg>
                 </a></li>
                 <li class="items-icon"> <a class="link-social" href="">
-                    <svg class="footer-icon" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-facebook"></use></svg>
+                    <svg class="footer-icons" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-facebook"></use></svg>
                 </a></li>
                 <li class="items-icon"> <a class="link-social" href="">
-                    <svg class="footer-icon" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-linkedin"></use></svg>
+                    <svg class="footer-icons" width="20" height="20"> <use href="./images/symbol-defs2.svg#icon-linkedin"></use></svg>
                 </a></li>
             </ul>
         </div>
